Upgraded to Java 25 and changed openjdk to eclipse-temurin